--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+# Environments
+.secret
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Python
+app/__pycache__/
+app/*/__pycache__/
+app/*/*/__pycache__/
+app/*/*/*/__pycache__/
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# vscode
+.vscode
+
 # PyCharm
 .idea
